--- a/DriverApp/ColdStartChallenge.DriverApp/ColdStartChallenge.DriverApp.UWP/ColdStartChallenge.DriverApp.UWP.csproj
+++ b/DriverApp/ColdStartChallenge.DriverApp/ColdStartChallenge.DriverApp.UWP/ColdStartChallenge.DriverApp.UWP.csproj
@@ -188,4 +188,9 @@
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadXFormsNugetUpgradeInfoBarColdStartChallengeDriverAppUWPHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
